Fixed misalignment of header

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -28,13 +28,16 @@
   fill: var(--blue);
 }
 
+@media screen and (min-width: 30em) {
+  .site-header__nav {
+    padding: 1rem var(--spacing--large);
+  }
+}
+
 @media screen and (min-width: 37.5em) {
   .site-header {
     top: 0;
     position: fixed;
     width: 100%;
-  }
-  .site-header__nav {
-    padding: 1rem var(--spacing--large);
   }
 }
